syntax = "proto3";

option java_package = "com.github.cfogrady.vitalwear.protos";
option java_multiple_files = true;

message ConnectMeta {
  string ready_indicator = 1;
  repeated int32 supported_versions = 2;
}